<resources>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <string name="app_name">Gamification</string>
    <string name="all_next">Next</string>
    <string name="all_exit">Exit</string>
    <string name="draw_info">Click next or swipe to draw a card</string>
    <string name="createDeck_name">Name:</string>
    <string name="all_enterName">Enter name</string>
    <string name="createDeck_description">Description:</string>
    <string name="createDeck_enterDescription">Enter description</string>
    <string name="createDeck_prev">Previous</string>
    <string name="createDeck_type">Type:</string>
    <string name="createDeck_setImgGallery">Add image</string>
    <string name="all_delete">Delete</string>
    <string name="all_duplicate">Duplicate</string>
    <string name="deckManagerMenu_delete">Click to delete decks!</string>
    <string name="deckManagerMenu_duplicate">Click to duplicate decks</string>
    <string name="change_name_txt">Change name of deck</string>
    <string name="all_cancel">Exit</string>
    <string name="all_ok">OK</string>
    <string name="change_name_emptyField">Please fill field</string>
    <string name="all_award">award</string>
    <string name="list_info">You don\'t have any deck. Please create one.</string>
    <string name="all_addDeck">Add deck</string>
    <string name="all_name">Name</string>
    <string name="deckList_number">No. awards</string>
    <string name="cardList_type">type</string>
    <string name="cardEditor_addCard">Add card</string>
    <string name="all_save">Save</string>
    <string name="draw_congratulations">Congratulations you drew all cards</string>
...
    <string name="draw_sorryStatement">Sorry, you drew a blank card</string>
    <string name="draw_contentDescription">image of award</string>
    <string name="draw_counter">All cards:</string>
    <string-array name="menu_items">
        <item>Create Deck</item>
        <item>Draw Card</item>
        <item>Deck Manager</item>
        <item>Help</item>
    </string-array>
    <string-array name="type_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
...
