<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_createCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="xyz.miroslaw.gamification_android.createDeck.CreateDeckFragment">
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/createDeck_prev" />

        <Button
            android:id="@+id/btn_createCard_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/all_next" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createDeck_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_createCard_name"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/all_enterName"
        android:inputType="text"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createDeck_description"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_createCard_description"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/createDeck_enterDescription"
        android:textAlignment="center"
...
