<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/decklist_border"
    android:minHeight="30dp">

    <TextView
        android:id="@+id/txt_deckList_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/txt_list_number"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/txt_list_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp" />

</RelativeLayout>